--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/chatapp?retryWrites=true&w=majority
 JWT_SECRET=your_jwt_secret_key
-FRONTEND_URL=https://your-netlify-site.netlify.app
+FRONTEND_URL=https://mern-chat-project.netlify.app/
 PORT=5000
